# c-college-work

./: CMakeLists.txt  main.c
src/: animations.h  menu.h
src/algorithms/: calculateAverageGrades.h  calculateDividers.h  calculateExponential.h  calculateFibonacci.h  calculateMoney.h  calculatePopulation.h  cupPlay.h  index.h  isNumberPrime.h  selectHighestSalary.h
src/libs/: utils.h
